<resources>
    <string name="app_name">PokemonApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="statistics">Statistics</string>
    <string name="hp">HP:</string>
    <string name="atk">ATK:</string>
    <string name="def">DEF:</string>
    <string name="spd">SPD:</string>
    <string name="sp_atk">SpATK:</string>
    <string name="sp_def">SpDEF:</string>
    <string name="scale">Scale from 0 a 160</string>
    <string name="abilities">Abilities</string>
    <string name="evolutions">Evolutions</string>

</resources>