<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/pkNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintEnd_toStartOf="@+id/name"
            app:layout_constraintTop_toTopOf="@+id/name"
            tools:text="#100" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="36dp"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="skydoves" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo"
            android:translationZ="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:itemCount="3"
            tools:listitem="@layout/item_detail" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvType"
            tools:text="24.0 KG" />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toTopOf="@id/weight"
            tools:text="11 M" />

        <TextView
            android:id="@+id/weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight" />

        <TextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toBottomOf="@id/height" />

        <TextView
            android:id="@+id/stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/statistics"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight_title" />

        <TextView
            android:id="@+id/scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/scale"
            android:textColor="#555454"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/stats_title"
            app:layout_constraintStart_toStartOf="@id/stats_title"
            app:layout_constraintTop_toBottomOf="@id/stats_title" />

        <LinearLayout
            android:id="@+id/lnStatistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scale"
            android:layout_marginHorizontal="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/hp"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/HpProgress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="26dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@id/hp"
                    app:layout_constraintStart_toEndOf="@id/hp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="160"
                    android:progress="45"/>

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/spd"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toStartOf="@id/spDef"
                    app:layout_constraintTop_toBottomOf="@id/spDef" />

                <ProgressBar
                    android:id="@+id/spdProgress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@id/speed"
                    app:layout_constraintStart_toEndOf="@id/speed"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="160"
                    android:progress="45"/>

                <TextView
                    android:id="@+id/spAtk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sp_atk"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toStartOf="@id/attack"
                    app:layout_constraintTop_toBottomOf="@id/attack" />

                <ProgressBar
                    android:id="@+id/spAtkProgress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@id/spAtk"
                    app:layout_constraintStart_toEndOf="@id/spAtk"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="160"
                    android:progress="45"/>

                <TextView
                    android:id="@+id/attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/atk"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toStartOf="@id/hp"
                    app:layout_constraintTop_toBottomOf="@id/hp" />

                <ProgressBar
                    android:id="@+id/atkProgress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="34dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@id/attack"
                    app:layout_constraintStart_toEndOf="@id/attack"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="160"
                    android:progress="45"/>

                <TextView
                    android:id="@+id/defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/def"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toStartOf="@id/spAtk"
                    app:layout_constraintTop_toBottomOf="@id/spAtk" />

                <ProgressBar
                    android:id="@+id/defProgress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@id/defense"
                    app:layout_constraintStart_toEndOf="@id/defense"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="160"
                    android:progress="45"/>

                <TextView
                    android:id="@+id/spDef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sp_def"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toStartOf="@id/defense"
                    app:layout_constraintTop_toBottomOf="@id/defense" />

                <ProgressBar
                    android:id="@+id/spDefProgress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@id/spDef"
                    app:layout_constraintStart_toEndOf="@id/spDef"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="160"
                    android:progress="45"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/abilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/abilities"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnStatistic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAbilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abilities"
            tools:itemCount="3"
            tools:listitem="@layout/item_abilities" />

        <TextView
            android:id="@+id/tvEvolutions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rvAbilities"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/evolutions"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPokemonEvolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEvolutions"
            app:spanCount="2"
            tools:itemCount="4"
            tools:listitem="@layout/item_evolution" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>